--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,19 +1,56 @@
-
-\titlepage[Imperial College London]{A dissertation submitted for \ldots \wordcount}
+\titlepage[Department of Physics]{A thesis submitted to Imperial
+  College London for partial
+fulfillment of the requirements for the degree of Doctor of Philosophy \wordcount}
 \begin{abstract}
-        This thesis describes work I did during my PhD\ldots
-\end{abstract}
-
+    Matter-wave interferometry has enabled high precision measurements of
+    inertial forces such as gravity and the
+    Coriolis force. This is facilitated by the long-term stability of
+    the physical properties of atoms and lasers. Recent experiments have
+    demonstrated the operation of portable, robust sensors using atom
+    interferometry. This has potential uses in the context of inertial
+    navigation, where conventional devices suffer from long-term
+    drifts due to bias instability. Furthermore, determining position
+    via dead reckoning requires minimisation of dead time between
+    measurements. This thesis presents the development of an atom
+    interferometer for measuring horizontal accelerations. In this
+    configuration, gravity induces motion across
+    the laser wavefront, which constrains the tolerable level of
+    wavefront distortions. Effective control of the experiment allows
+    the interferometer to be operated at a rate of \sivalue{4}{\Hz}. A cold ensemble of $10^6$ atoms in the same
+    internal state is prepared in \sivalue{150}{\ms}. The
+    interferometer operates
+    using a sequence of three laser pulses separated by
+    $T=$ \sivalue{25}{\ms} to achieve sensitivity
+    to horizontal accelerations. Combining this with a classical
+    accelerometer provides a method of correcting for
+    vibration-induced noise, as well as determining the interferometer
+    fringe order. After an integration time of \sivalue{70}{\s}, the
+    sensitivity to horizontal accelerations is better than
+    \sivalue{1e-6}{\m\s\tothe{-2}}. Effects which limit this
+    sensitivity are discussed.
+ \end{abstract}
 \begin{declaration}
-This dissertation is the result of my own work\ldots
+  I declare that this thesis is the result of my own work. All sources
+  used for this work have been clearly referenced in accordance with
+  the departmental requirements.   
         \vspace*{1cm}
         \begin{flushright}
         Jimmy Stammers
         \end{flushright}
+        \vfill
+  The copyright of this thesis rests with the author and is made
+available under a Creative Commons Attribution Non-Commercial No
+Derivatives licence. Researchers are free to copy, distribute or
+transmit the thesis on the condition that they attribute it, that they do
+not use it for commercial purposes and that they do not alter,
+transform or build upon it. For any reuse or redistribution,
+researchers must make clear to others the licence terms of this
+work.
 \end{declaration}
-
+\begin{Copyright Declaration}
+\end{Copyright Declaration}
 \begin{acknowledgements}
-    Some people worth thanking\ldots
+    There are many people to whom I owe a great deal of thanks. 
 \end{acknowledgements}
 
 \begin{preface}
